Add contact picker for customer selection
- Add button to select customer from device contacts
- Automatically populate name and phone number fields
- Create ContactPicker SwiftUI wrapper for CNContactPickerViewController
- Add NSContactsUsageDescription permission to project settings
- Add PrivacyInfo.xcprivacy for privacy compliance
- Update English and Turkish localizations
- Prefer mobile numbers when available, fallback to first phone

--- a/BookMyChair/Resources/en.lproj/Localizable.strings
+++ b/BookMyChair/Resources/en.lproj/Localizable.strings
@@ -22,6 +22,11 @@
 "minute" = "Minute";
 "save_button" = "Save";
 "delete_button" = "Delete";
+"Select from contacts" = "Select from Contacts";
+"Call customer" = "Call Customer";
+"Add new reservation" = "Add New Reservation";
+"Tap to edit reservation" = "Tap to edit reservation";
+"Appointment Time" = "Appointment Time";
 
 /* Alerts */
 "error" = "Error";
