Prevent creating reservations for past times
- Filter available hours/minutes to only show future times when date is today
- Add validation in save() to prevent past time reservations
- Show clear error message when attempting to book past time
- For current hour, only show :30 minute slot if current time is before :30
- Add localization for past_time_error in English and Turkish
- Automatically adjusts available time slots as time passes

--- a/BookMyChair/Resources/en.lproj/Localizable.strings
+++ b/BookMyChair/Resources/en.lproj/Localizable.strings
@@ -49,6 +49,7 @@
 "delete_hairdresser_message" = "Are you sure you want to delete %@? All associated appointments will be permanently deleted.";
 "conflict_title" = "Time Conflict";
 "conflict_message" = "This time slot is already reserved. Please choose a different time.";
+"past_time_error" = "Cannot create reservation for a past time. Please select a future time.";
 "validation_error" = "Validation Error";
 "empty_name_error" = "Customer name cannot be empty";
 "empty_phone_error" = "Phone number cannot be empty";
