Emphasize contact picker and fix save button validation
- Move contact picker to its own section at the top with prominent button
- Large gradient button (44px) with icon, title, and 'Recommended' label
- Manual entry fields moved to separate section with 'Or enter manually' header
- Fix save button validation to check trimmed values (prevents saving whitespace-only entries)
- Clear visual hierarchy: contact picker is primary, manual entry is secondary
- Add localization for new labels (Customer, Recommended, Or enter manually)

--- a/BookMyChair/Resources/en.lproj/Localizable.strings
+++ b/BookMyChair/Resources/en.lproj/Localizable.strings
@@ -29,6 +29,9 @@
 "edit_reservation" = "Edit Reservation";
 "customer_name" = "Customer Name";
 "phone_number" = "Phone Number";
+"Customer" = "Customer";
+"Recommended" = "Recommended";
+"Or enter manually" = "Or enter manually";
 "select_time" = "Select Time";
 "hour" = "Hour";
 "minute" = "Minute";
